--- a/styles/docs.css
+++ b/styles/docs.css
@@ -154,6 +154,7 @@ svg {
   color: var(--c-secondary);
   font-size: 16px;
   font-weight: 300;
+  line-height: 24px;
   margin-bottom: 16px;
   margin-top: 16px;
 }
