--- a/v2/app/globals.css
+++ b/v2/app/globals.css
@@ -4,12 +4,12 @@
 
 :root {
   --background-color: #fafafa;
-  --background-color: #121212;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background-color: #121212;
+    --background-color: #fafafa;
   }
 }
 
